More dark mode fixes

--- a/css/dark.css
+++ b/css/dark.css
@@ -30,3 +30,7 @@ img {
 .select::after {
   background: #333 !important;
 }
+
+.closeBtn:hover {
+  color: white !important;
+}
