--- a/css/menu.css
+++ b/css/menu.css
@@ -103,15 +103,15 @@ li a:hover:not(.active) {
 }
 
 /* The Close Button */
-.close {
+.closeBtn {
   color: #aaaaaa;
   float: right;
   font-size: 28px;
   font-weight: bold;
 }
 
-.close:hover,
-.close:focus {
+.closeBtn:hover,
+.closeBtn:focus {
   color: #000;
   text-decoration: none;
   cursor: pointer;
